added code to HTML file

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,6 +12,33 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
+      <section class="card" id=""html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Hyper Text Markup Language; gives webpage structure</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h3>CSS</h3>
+        <ul>
+          <li>Cascading Style Sheet; gives webpage style, how the user will see the page</li>
+        </ul>
+    </section>
+    <section class="card" id="git-section">
+      <h4>GIT</h4>
+      <ul>
+        <li>git; version control; git hub; Code hosting platform for version control and collaberation </li>
+        <li>git status: checks what branch we are currently on</li>
+        <li>git checkout -b branch name: creates a new branch and switches to it</li>
+      </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h5>JAVASCRIPT</h5>
+        <ul>
+          <li>Allows user to interact with webpage</li>
+        </ul>
+        </section>
+
       <!-- Student code goes here -->
     </main>
 
